--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 .move-button  {
   width: 200px;
-  background-color: #27ae60;
+  background-color: rebeccapurple;
   border-width: 0px;
   border-radius: 5px;
   color: #fff;
